syntax = "proto3";

package proto;

option go_package = "../proto";

service Exprs {
    rpc GetExpr(ExprRequest) returns (ExprResponse);
}

message ExprRequest {}

message ExprResponse {
    int64 ID = 1;       
	int64 UserID = 2;  
	string Oper = 3; 
	int32 LastTask = 4;    
	double Ans = 5;     
	int32 Status = 6;    
	int64 Agent = 7;  
}